# videre

./: .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  KEYBOARD_SHORTCUTS_IMPLEMENTATION.md  LICENSE  PLAN_LEPTOS_MIGRATION.md  README.md  SETTINGS_IMPLEMENTATION.md  SHORTCUTS.md  THEMES.md  Trunk.toml  USAGE.md  WORKFLOWS.md  docker-compose.yml  index.html  init-db.sql  package.json  style.css  tailwind.config.js  tsconfig.json
.github/workflows/: test.yml
src/: App.tsx  index.css  main.tsx
src-leptos/: Cargo.toml
src-leptos/src/: connection.rs  connection_store.rs  data_table.rs  db_store.rs  indexes_page.rs  main.rs  roles_page.rs  shell.rs  sidebar.rs  tab_bar.rs  tab_store.rs  table_page.rs  tauri.rs  theme.rs  types.rs
src-leptos/src/components/: data_table.rs  drawer.rs  empty.rs  icons.rs  mod.rs  shell.rs  sidebar.rs  tab_bar.rs
src-leptos/src/pages/: connection.rs  indexes.rs  mod.rs  roles.rs  settings.rs  table.rs
src-leptos/src/stores/: db_store.rs  mod.rs
src-react/: index.css  main.tsx
src-react/hooks/: useKeyboardShortcuts.ts
src-react/lib/: theme.ts
src-react/store/: dbStore.ts
src-react/themes/: amethyst-haze.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.react.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/tests/: db_integration.rs
src/components/: ConnectionPage.tsx  DataTable.tsx  EmptyTab.tsx  SettingsView.tsx  Sidebar.tsx  TabBar.tsx  TableView.tsx  ThemeToggle.tsx  index.ts
src/hooks/: index.ts
src/lib/: tauri.ts  theme.ts
(+44 files in other folders)
