[package]
name = "videre-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "Element",
    "Event",
    "SubmitEvent",
    "InputEvent",
    "KeyboardEvent",
    "HtmlInputElement",
    "EventTarget",
    "Navigator",
    "Storage",
    "DomTokenList",
    "console",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
